--- a/index.html
+++ b/index.html
@@ -15,63 +15,21 @@
       <div class="hero-inner">
         <div class="menu-item-container">
           <h1>Desserts</h1>
+          <div class="hero-grid">
 
+          </div>
         </div>
         <div class="hero-cart">
-
+          Your Cart (<!-- Quantity -->)
+          Your added items will appear here
+          <h1 class="title"></h1>
         </div>
       </div>
     </div>
   </section>
   
 
-  Waffle with Berries
-  Waffle
-  6.50
-  Add to Cart
 
-  Vanilla Bean Crème Brûlée
-  Crème Brûlée
-  7.00
-  Add to Cart
-
-  Macaron Mix of Five
-  Macaron
-  8.00
-  Add to Cart
-
-  Classic Tiramisu
-  Tiramisu
-  5.50
-  Add to Cart
-
-  Pistachio Baklava
-  Baklava
-  4.00
-  Add to Cart
-
-  Lemon Meringue Pie
-  Pie
-  5.00
-  Add to Cart
-
-  Red Velvet Cake
-  Cake
-  4.50
-  Add to Cart
-
-  Salted Caramel Brownie
-  Brownie
-  4.50
-  Add to Cart
-
-  Vanilla Panna Cotta
-  Panna Cotta
-  6.50
-  Add to Cart
-
-  Your Cart (<!-- Quantity -->)
-  Your added items will appear here
   <script src="/script.js"></script>
 </body>
 </html>
