--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         <div class="menu-item-container">
           <h1>Desserts</h1>
           <div class="hero-grid">
-
           </div>
         </div>
-        <div class="hero-cart">
-          Your Cart (<!-- Quantity -->)
-          Your added items will appear here
-          <h1 class="title"></h1>
+        <div class="sidebar" id="cartItem">
+          <div class="head"><p>My Cart</p></div>
+          <div class="cartItem">Your cart is empty</div>
+          <div class="foot">
+            <h3>Order Total</h3>
+            <h2 class="total">$0.00</h2>
+          </div>
+          
         </div>
       </div>
     </div>
