--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           </div>
         </div>
         <div class="sidebar" id="cartItem">
-          <div class="count">Your Items</div>
+          <div class="count"></div>
           <div class="head"><p>My Cart</p></div>
           <div class="cartItem">Your cart is empty</div>
           <div class="foot">
               <h3>Order Total</h3>
               <h2 class="total">$0.00</h2>
           </div>
-          <button class="confirm-order" id="confirmOrder">Confirm Order</button>
+          <button id="placeOrder" style="display: none;">Place Order</button>
         </div>
         <!-- Pop-up for order confirmation -->
         <div class="popup-overlay" id="popupOverlay"></div>
